peac_dev/force-app/main/default/objects/Meter_Reads_Case__mdt/Meter_Reads_Case__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is used to store the information about meter reads case creation on dynamic UI(LWC)</description>
    <label>Meter Reads Case</label>
    <pluralLabel>Meter Reads Cases</pluralLabel>
</CustomObject>