peac_dev/force-app/main/default/objects/Meter_Reads_Case__mdt/fields/Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Button_Name__c</fullName>
    <description>Provide Case Reason Picklist Value API name here.</description>
    <inlineHelpText>Provide Case Reason Picklist Value API name here.</inlineHelpText>
    <label>Button Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>