peac_dev/force-app/main/default/objects/Meter_Reads_Case__mdt/fields/Case_Record_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type_API_Name__c</fullName>
    <description>Store Case record type api name</description>
    <label>Case Record Type API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>