peac_dev/force-app/main/default/objects/Meter_Reads_Case__mdt/fields/Default_Template__c.field-meta.xml
<CustomField>
    <fullName>Default_Template__c</fullName>
    <description>Default template with predefined values</description>
    <label>Default Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>