peac_dev/force-app/main/default/objects/Meter_Reads_Case__mdt/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <description>Store the Queue Name to assign for the case type</description>
    <label>Queue Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>