peac_dev/force-app/main/default/objects/Meter_Reads_Case__mdt/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Button_Name__c</columns>
    <columns>Queue_Name__c</columns>
    <columns>Case_Record_Type_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>